[package]
name = "pair-mock"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/pair.rs"

[dependencies.dharitri-sc]
version = "=0.13.6"
features = ["dct-token-payment-legacy-decode"]

[dev-dependencies.dharitri-sc-scenario]
version = "=0.13.6"
