[package]
name = "router-mock"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/router_mock.rs"

[dependencies.dharitri-sc]
version = "=0.13.6"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.13.6"
