[package]
name = "metabonding-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "Dorin Marian Iancu, dorin.iancu@dharitri.com" ]

[dev-dependencies]

[dependencies.metabonding]
path = ".."

[dependencies.dharitri-wasm]
version = "=0.10.6"

[dependencies.dharitri-wasm-debug]
version = "=0.10.6"
